--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,51 @@
 # Dependencies
 node_modules/
-.pnp
+.pnp/
 .pnp.js
 
-# Testing
-coverage/
-
-# Production
-build/
-dist/
-out/
-
-# Misc
-.DS_Store
+# Environment files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+
+# Build outputs
+dist/
+build/
+.next/
+out/
+.serverless/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Testing
+coverage/
+
+# Misc
+.env
 
 # Logs
 npm-debug.log*
