--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,16 @@
 {
   "name": "task-management-backend",
   "version": "1.0.0",
-  "description": "Backend for Task Management Application",
-  "main": "dist/server.js",
+  "description": "Backend API for Datacom Task App",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "start": "cross-env NODE_ENV=development ts-node src/server.ts",
+    "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
-    "lint": "eslint . --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "create-table": "ts-node src/scripts/createTable.ts"
+    "test": "jest",
+    "deploy:dev": "cross-env NODE_ENV=development serverless deploy --stage dev",
+    "deploy:prod": "cross-env NODE_ENV=production serverless deploy --stage prod",
+    "start:prod": "cross-env NODE_ENV=production node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,15 +19,23 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.767.0",
     "@aws-sdk/lib-dynamodb": "^3.767.0",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.124",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "serverless": "^3.30.1",
+    "serverless-http": "^3.2.0"
   }
 }
